--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/chaitanyasura/MLFlow-project/research'"
+       "'/Users/chaitanyasura'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,16 +31,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mApplications\u001b[m\u001b[m/     \u001b[34mDocuments\u001b[m\u001b[m/        \u001b[34mMovies\u001b[m\u001b[m/           \u001b[34mPublic\u001b[m\u001b[m/\n",
+      "\u001b[34mBreastCancer\u001b[m\u001b[m/     \u001b[34mDownloads\u001b[m\u001b[m/        \u001b[34mMusic\u001b[m\u001b[m/            s.py\n",
+      "\u001b[34mcricket_analysis\u001b[m\u001b[m/ \u001b[34mLibrary\u001b[m\u001b[m/          \u001b[34mPictures\u001b[m\u001b[m/         scrape.py\n",
+      "\u001b[34mDesktop\u001b[m\u001b[m/          \u001b[34mMLFlow-project\u001b[m\u001b[m/   \u001b[34mprojects\u001b[m\u001b[m/         Untitled.ipynb\n"
+     ]
+    }
+   ],
    "source": [
-    "os.chdir(\"../\")"
+    "%ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/chaitanyasura/MLFlow-project\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/mlproj/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd MLFlow-project/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +85,7 @@
        "'/Users/chaitanyasura/MLFlow-project'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,19 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-05-24 16:07:23,126: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2025-05-24 16:07:23,132: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-05-24 16:07:23,135: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-05-24 16:07:23,136: INFO: common: created directory at: artifacts]\n",
-      "[2025-05-24 16:07:23,136: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-05-24 16:07:23,618: INFO: 784587351: artifacts/data_ingestion/data.zip download! with the following info: \n",
+      "[2025-05-24 16:59:16,828: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-05-24 16:59:16,830: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-05-24 16:59:16,831: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-05-24 16:59:16,832: INFO: common: created directory at: artifacts]\n",
+      "[2025-05-24 16:59:16,832: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-05-24 16:59:17,261: INFO: 784587351: artifacts/data_ingestion/data.zip download! with the following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -198,17 +234,17 @@
       "X-XSS-Protection: 1; mode=block\n",
       "X-GitHub-Request-Id: 1803:3BB328:2DDAAB:3596E0:683226FB\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sat, 24 May 2025 20:07:23 GMT\n",
+      "Date: Sat, 24 May 2025 20:59:17 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-pdk-kfty8610067-PDK\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-pdk-kfty8610089-PDK\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1748117244.543258,VS0,VE92\n",
+      "X-Timer: S1748120357.144043,VS0,VE101\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 0d7d1730fdf07e032649b06737f46df261b22d6f\n",
-      "Expires: Sat, 24 May 2025 20:12:23 GMT\n",
+      "X-Fastly-Request-ID: 33113e263bc56413bbb5fecab283327f39b63359\n",
+      "Expires: Sat, 24 May 2025 21:04:17 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
